--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ p, h1, h2, h3, h4, h5, h6 {
     width: min(60rem, 100% - 4rem);
     margin-inline: auto;
     margin-top: 35px;
+    margin-bottom: 35px;
     font-family: 'Fira Code', monospace;
     border-radius: 20px;
     padding: 10px;
